--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet"/>
+        <link rel="stylesheet" href="./scss/style.scss">
     </head>
     <body>
         <header class="parent">
