--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet"/>
         <link rel="stylesheet" href="./scss/style.scss">
     </head>
-    <body>
+    <body class="light">
         <header class="parent">
             <div class="container">
                 <div class="title">
