adding header, typography, utilities , correct colors and mixins

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>IMO | Password generator</title>
-        <link rel="stylesheet"href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css"/>
-        <link rel="stylesheet"href="../node_modules/normalize.css/normalize.css"/>
+        <link
+            rel="stylesheet"
+            href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+        />
+        <link rel="stylesheet" href="../node_modules/normalize.css/normalize.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet"/>
-        <link rel="stylesheet" href="./scss/style.scss">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="./scss/style.scss" />
     </head>
     <body class="light">
         <header class="parent">
@@ -22,23 +28,25 @@
                 <form class="generator">
                     <div class="screen">
                         <input type="text" name="fgenerator" id="generator" />
-                        <label for="fgenerator"></label>
+                        <label for="fgenerator">
                             <i class="fas fa-clipboard"></i>
                         </label>
                     </div>
-                    <button type="submit">
-                        Settings
-                        <i class="fas fa-cog"></i>
-                    </button>
-                    <button type="submit">
-                        Generate
-                        <i class="fas fa-check-circle"></i>
-                    </button>
+                    <div class="buttons">
+                        <button type="submit">
+                            Settings
+                            <i class="fas fa-cog"></i>
+                        </button>
+                        <button type="submit">
+                            Generate
+                            <i class="fas fa-check-circle"></i>
+                        </button>
+                    </div>
                 </form>
                 <hr />
                 <p>
-                    Remember your password with the first character of each word
-                    in the generated sentence
+                    Remember your password with the first character of each word in the
+                    generated sentence
                 </p>
                 <div class="img">
                     <img
@@ -66,19 +74,13 @@
                     <li class="card">
                         <h3>Full control</h3>
                         <div class="img">
-                            <img
-                                src="./images/Features/2.svg"
-                                alt="Full control"
-                            />
+                            <img src="./images/Features/2.svg" alt="Full control" />
                         </div>
                     </li>
                     <li class="card">
                         <h3>Open source</h3>
                         <div class="img">
-                            <img
-                                src="./images/Features/3.svg"
-                                alt="Open source"
-                            />
+                            <img src="./images/Features/3.svg" alt="Open source" />
                         </div>
                     </li>
                     <li class="card">
@@ -96,10 +98,7 @@
                     <li class="card">
                         <h3>Memorable</h3>
                         <div class="img">
-                            <img
-                                src="./images/Features/6.svg"
-                                alt="Memorable"
-                            />
+                            <img src="./images/Features/6.svg" alt="Memorable" />
                         </div>
                     </li>
                 </ul>
@@ -118,15 +117,14 @@
                             <p>Lorem ipsum dolor sit amet, consecte</p>
                         </div>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit ut aliquam, purus sit amet luctus venenatis,
-                            lectus magna fringilla urna, porttitor rhoncus dolor
-                            purus non enim praesent elementum facilisis leo, vel
-                            fringilla est ullamcorper eget nulla facilisi etiam
-                            dignissim diam quis enim lobortis scelerisque
-                            fermentum dui faucibus in ornare quam viverra orci
-                            sagittis eu volutpat odio facilisis mauris sit amet
-                            massa vitae tortor condimentum lacinia quis vel eros
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
+                            aliquam, purus sit amet luctus venenatis, lectus magna
+                            fringilla urna, porttitor rhoncus dolor purus non enim
+                            praesent elementum facilisis leo, vel fringilla est
+                            ullamcorper eget nulla facilisi etiam dignissim diam quis enim
+                            lobortis scelerisque fermentum dui faucibus in ornare quam
+                            viverra orci sagittis eu volutpat odio facilisis mauris sit
+                            amet massa vitae tortor condimentum lacinia quis vel eros
                             donec ac odio tempor
                         </p>
                     </li>
@@ -139,15 +137,14 @@
                             <p>Lorem ipsum dolor sit amet, consecte</p>
                         </div>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit ut aliquam, purus sit amet luctus venenatis,
-                            lectus magna fringilla urna, porttitor rhoncus dolor
-                            purus non enim praesent elementum facilisis leo, vel
-                            fringilla est ullamcorper eget nulla facilisi etiam
-                            dignissim diam quis enim lobortis scelerisque
-                            fermentum dui faucibus in ornare quam viverra orci
-                            sagittis eu volutpat odio facilisis mauris sit amet
-                            massa vitae tortor condimentum lacinia quis vel eros
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
+                            aliquam, purus sit amet luctus venenatis, lectus magna
+                            fringilla urna, porttitor rhoncus dolor purus non enim
+                            praesent elementum facilisis leo, vel fringilla est
+                            ullamcorper eget nulla facilisi etiam dignissim diam quis enim
+                            lobortis scelerisque fermentum dui faucibus in ornare quam
+                            viverra orci sagittis eu volutpat odio facilisis mauris sit
+                            amet massa vitae tortor condimentum lacinia quis vel eros
                             donec ac odio tempor
                         </p>
                     </li>
@@ -160,15 +157,14 @@
                             <p>Lorem ipsum dolor sit amet, consecte</p>
                         </div>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit ut aliquam, purus sit amet luctus venenatis,
-                            lectus magna fringilla urna, porttitor rhoncus dolor
-                            purus non enim praesent elementum facilisis leo, vel
-                            fringilla est ullamcorper eget nulla facilisi etiam
-                            dignissim diam quis enim lobortis scelerisque
-                            fermentum dui faucibus in ornare quam viverra orci
-                            sagittis eu volutpat odio facilisis mauris sit amet
-                            massa vitae tortor condimentum lacinia quis vel eros
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
+                            aliquam, purus sit amet luctus venenatis, lectus magna
+                            fringilla urna, porttitor rhoncus dolor purus non enim
+                            praesent elementum facilisis leo, vel fringilla est
+                            ullamcorper eget nulla facilisi etiam dignissim diam quis enim
+                            lobortis scelerisque fermentum dui faucibus in ornare quam
+                            viverra orci sagittis eu volutpat odio facilisis mauris sit
+                            amet massa vitae tortor condimentum lacinia quis vel eros
                             donec ac odio tempor
                         </p>
                     </li>
@@ -181,15 +177,14 @@
                             <p>Lorem ipsum dolor sit amet, consecte</p>
                         </div>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit ut aliquam, purus sit amet luctus venenatis,
-                            lectus magna fringilla urna, porttitor rhoncus dolor
-                            purus non enim praesent elementum facilisis leo, vel
-                            fringilla est ullamcorper eget nulla facilisi etiam
-                            dignissim diam quis enim lobortis scelerisque
-                            fermentum dui faucibus in ornare quam viverra orci
-                            sagittis eu volutpat odio facilisis mauris sit amet
-                            massa vitae tortor condimentum lacinia quis vel eros
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
+                            aliquam, purus sit amet luctus venenatis, lectus magna
+                            fringilla urna, porttitor rhoncus dolor purus non enim
+                            praesent elementum facilisis leo, vel fringilla est
+                            ullamcorper eget nulla facilisi etiam dignissim diam quis enim
+                            lobortis scelerisque fermentum dui faucibus in ornare quam
+                            viverra orci sagittis eu volutpat odio facilisis mauris sit
+                            amet massa vitae tortor condimentum lacinia quis vel eros
                             donec ac odio tempor
                         </p>
                     </li>
@@ -202,15 +197,14 @@
                             <p>Lorem ipsum dolor sit amet, consecte</p>
                         </div>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit ut aliquam, purus sit amet luctus venenatis,
-                            lectus magna fringilla urna, porttitor rhoncus dolor
-                            purus non enim praesent elementum facilisis leo, vel
-                            fringilla est ullamcorper eget nulla facilisi etiam
-                            dignissim diam quis enim lobortis scelerisque
-                            fermentum dui faucibus in ornare quam viverra orci
-                            sagittis eu volutpat odio facilisis mauris sit amet
-                            massa vitae tortor condimentum lacinia quis vel eros
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
+                            aliquam, purus sit amet luctus venenatis, lectus magna
+                            fringilla urna, porttitor rhoncus dolor purus non enim
+                            praesent elementum facilisis leo, vel fringilla est
+                            ullamcorper eget nulla facilisi etiam dignissim diam quis enim
+                            lobortis scelerisque fermentum dui faucibus in ornare quam
+                            viverra orci sagittis eu volutpat odio facilisis mauris sit
+                            amet massa vitae tortor condimentum lacinia quis vel eros
                             donec ac odio tempor
                         </p>
                     </li>
@@ -221,17 +215,14 @@
             <div class="container">
                 <div class="profile">
                     <div class="img">
-                        <img
-                            src="./images/ouanis.png"
-                            alt="IDJA Mohamed Ouanis"
-                        />
+                        <img src="./images/ouanis.png" alt="IDJA Mohamed Ouanis" />
                     </div>
                     <h3>IDJA Mohamed Ouanis</h3>
                     <p>
-                        Hi, my name is Wanis, I am from Algeria. I am a junior
-                        UI/UX designer and front developer. I study LPDWI in
-                        Boumerdes. I am curious about web. I have the talent,
-                        creativity and knowledge to build your future website
+                        Hi, my name is Wanis, I am from Algeria. I am a junior UI/UX
+                        designer and front developer. I study LPDWI in Boumerdes. I am
+                        curious about web. I have the talent, creativity and knowledge to
+                        build your future website
                     </p>
                     <ul class="social">
                         <li>
@@ -332,9 +323,7 @@
                     <ul>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:ouanis42@gmail.com">
-                                ouanis42@gmail.com
-                            </a>
+                            <a href="mailto:ouanis42@gmail.com"> ouanis42@gmail.com </a>
                         </li>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
