correct the home img, add .parent css proprties, edit header

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
                 </p>
                 <div class="img">
                     <img
-                        src="./images/Home/1.svg"
+                        src="./images/Home/1v2.svg"
                         alt="A happy man satisfied with our service"
                     />
                 </div>
