add contact us to style.scss"

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         />
         <link rel="stylesheet" href="./scss/style.scss" />
     </head>
-    <body class="light">
+    <body class="dark">
         <header class="parent">
             <div class="container">
                 <div class="title">
@@ -112,11 +112,13 @@
                         <div class="question">
                             <div class="chevron">
                                 <input type="checkbox" name="chevron" id="" />
-                                <label for="chevron"></label>
+                                <label for="chevron">
+                                    <i class="fas fa-chevron-down"></i>
+                                </label>
                             </div>
                             <p>Lorem ipsum dolor sit amet, consecte</p>
                         </div>
-                        <p>
+                        <p class="answer">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
                             aliquam, purus sit amet luctus venenatis, lectus magna
                             fringilla urna, porttitor rhoncus dolor purus non enim
@@ -132,11 +134,13 @@
                         <div class="question">
                             <div class="chevron">
                                 <input type="checkbox" name="chevron" id="" />
-                                <label for="chevron"></label>
+                                <label for="chevron">
+                                    <i class="fas fa-chevron-down"></i>
+                                </label>
                             </div>
                             <p>Lorem ipsum dolor sit amet, consecte</p>
                         </div>
-                        <p>
+                        <p class="answer">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
                             aliquam, purus sit amet luctus venenatis, lectus magna
                             fringilla urna, porttitor rhoncus dolor purus non enim
@@ -152,11 +156,13 @@
                         <div class="question">
                             <div class="chevron">
                                 <input type="checkbox" name="chevron" id="" />
-                                <label for="chevron"></label>
+                                <label for="chevron">
+                                    <i class="fas fa-chevron-down"></i>
+                                </label>
                             </div>
                             <p>Lorem ipsum dolor sit amet, consecte</p>
                         </div>
-                        <p>
+                        <p class="answer">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
                             aliquam, purus sit amet luctus venenatis, lectus magna
                             fringilla urna, porttitor rhoncus dolor purus non enim
@@ -172,11 +178,13 @@
                         <div class="question">
                             <div class="chevron">
                                 <input type="checkbox" name="chevron" id="" />
-                                <label for="chevron"></label>
+                                <label for="chevron">
+                                    <i class="fas fa-chevron-down"></i>
+                                </label>
                             </div>
                             <p>Lorem ipsum dolor sit amet, consecte</p>
                         </div>
-                        <p>
+                        <p class="answer">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
                             aliquam, purus sit amet luctus venenatis, lectus magna
                             fringilla urna, porttitor rhoncus dolor purus non enim
@@ -192,11 +200,13 @@
                         <div class="question">
                             <div class="chevron">
                                 <input type="checkbox" name="chevron" id="" />
-                                <label for="chevron"></label>
+                                <label for="chevron">
+                                    <i class="fas fa-chevron-down"></i>
+                                </label>
                             </div>
                             <p>Lorem ipsum dolor sit amet, consecte</p>
                         </div>
-                        <p>
+                        <p class="answer">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
                             aliquam, purus sit amet luctus venenatis, lectus magna
                             fringilla urna, porttitor rhoncus dolor purus non enim
