give chevrons an id

--- a/src/index.html
+++ b/src/index.html
@@ -111,8 +111,8 @@
                     <li>
                         <div class="question">
                             <div class="chevron">
-                                <input type="checkbox" name="chevron" id="" />
-                                <label for="chevron">
+                                <input type="checkbox" name="chevron1" id="chevron1" />
+                                <label for="chevron1">
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
                             </div>
@@ -133,8 +133,8 @@
                     <li>
                         <div class="question">
                             <div class="chevron">
-                                <input type="checkbox" name="chevron" id="" />
-                                <label for="chevron">
+                                <input type="checkbox" name="chevron2" id="chevron2" />
+                                <label for="chevron2">
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
                             </div>
@@ -155,8 +155,8 @@
                     <li>
                         <div class="question">
                             <div class="chevron">
-                                <input type="checkbox" name="chevron" id="" />
-                                <label for="chevron">
+                                <input type="checkbox" name="chevron3" id="chevron3" />
+                                <label for="chevron3">
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
                             </div>
@@ -177,8 +177,8 @@
                     <li>
                         <div class="question">
                             <div class="chevron">
-                                <input type="checkbox" name="chevron" id="" />
-                                <label for="chevron">
+                                <input type="checkbox" name="chevron4" id="chevron4" />
+                                <label for="chevron4">
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
                             </div>
@@ -199,8 +199,8 @@
                     <li>
                         <div class="question">
                             <div class="chevron">
-                                <input type="checkbox" name="chevron" id="" />
-                                <label for="chevron">
+                                <input type="checkbox" name="chevron5" id="chevron5" />
+                                <label for="chevron5">
                                     <i class="fas fa-chevron-down"></i>
                                 </label>
                             </div>
