--- a/src/index.html
+++ b/src/index.html
@@ -225,35 +225,37 @@
             <div class="container">
                 <div class="profile">
                     <div class="img">
-                        <img src="./images/ouanis.png" alt="IDJA Mohamed Ouanis" />
+                        <img src="./images/AboutUs/2.png" alt="IDJA Mohamed Ouanis" />
                     </div>
                     <h3>IDJA Mohamed Ouanis</h3>
-                    <p>
-                        Hi, my name is Wanis, I am from Algeria. I am a junior UI/UX
-                        designer and front developer. I study LPDWI in Boumerdes. I am
-                        curious about web. I have the talent, creativity and knowledge to
-                        build your future website
-                    </p>
-                    <ul class="social">
-                        <li>
-                            <a href="https://www.facebook.com/med.ouanis42">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.instagram.com/med.ouanis42">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/rouanis5">
-                                <i class="fab fa-github"></i>
-                            </a>
-                        </li>
-                    </ul>
+                    <div class="content">
+                        <p>
+                            Hi, my name is Wanis, I am from Algeria. I am a junior UI/UX
+                            designer and front developer. I study LPDWI in Boumerdes. I am
+                            curious about web. I have the talent, creativity and knowledge
+                            to build your future website
+                        </p>
+                        <ul class="social">
+                            <li>
+                                <a href="https://www.facebook.com/med.ouanis42">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/med.ouanis42">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/rouanis5">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
