add my profile, +mixin max-size, comment in fonts.scss

--- a/src/index.html
+++ b/src/index.html
@@ -223,11 +223,13 @@
         </div>
         <div class="aboutUs parent">
             <div class="container">
-                <div class="profile">
-                    <div class="img">
-                        <img src="./images/AboutUs/2.png" alt="IDJA Mohamed Ouanis" />
+                <div class="profile active">
+                    <div class="public">
+                        <div class="img">
+                            <img src="./images/AboutUs/2.png" alt="IDJA Mohamed Ouanis" />
+                        </div>
+                        <h3>IDJA Mohamed Ouanis</h3>
                     </div>
-                    <h3>IDJA Mohamed Ouanis</h3>
                     <div class="content">
                         <p>
                             Hi, my name is Wanis, I am from Algeria. I am a junior UI/UX
