+bg image class, + contactUs page

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
                     Remember your password with the first character of each word in the
                     generated sentence
                 </p>
-                <div class="img">
+                <div class="img bg">
                     <img
                         src="./images/Home/1v2.svg"
                         alt="A happy man satisfied with our service"
@@ -263,7 +263,7 @@
         </div>
         <div class="contactUs parent">
             <div class="container">
-                <h3>Need help? Have some question? suggestion?</h3>
+                <h2>Need help? Have some question? suggestion?</h2>
                 <ul class="column">
                     <li>
                         <span>1</span>
@@ -289,7 +289,7 @@
                     </li>
                 </ul>
                 <button type="submit">Email us</button>
-                <div class="img">
+                <div class="img bg">
                     <img
                         src="./images/ContactUs/Contact us-cuate.svg"
                         alt="customers service"
