+statistics page, modifictation in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -307,22 +307,28 @@
                                 <span>21</span>
                             </div>
                         </div>
-                        <h4>Started</h4>
-                        <h5>Year</h5>
+                        <div class="details">
+                            <h4>Started</h4>
+                            <h5>Year</h5>
+                        </div>
                     </li>
                     <li>
                         <div class="square">
                             <i class="fas fa-clock"></i>
                         </div>
-                        <h4>Effort</h4>
-                        <h5>72H</h5>
+                        <div class="details">
+                            <h4>Effort</h4>
+                            <h5>72H</h5>
+                        </div>
                     </li>
                     <li>
                         <div class="square">
                             <i class="fas fa-user-circle"></i>
                         </div>
-                        <h4>Visitors</h4>
-                        <h5>+1k</h5>
+                        <div class="details">
+                            <h4>Visitors</h4>
+                            <h5>+1k</h5>
+                        </div>
                     </li>
                 </ul>
             </div>
