finish footer + edits in html

--- a/src/index.html
+++ b/src/index.html
@@ -333,71 +333,75 @@
                 </ul>
             </div>
         </div>
-        <footer class="parent">
-            <div class="container">
-                <div class="img">
-                    <img src="./images/logo.jpg" alt="IMO logo" />
+        <footer>
+            <div class="footer__main parent">
+                <div class="container">
+                    <div class="img">
+                        <img src="./images/logo.jpg" alt="IMO logo" />
+                    </div>
+                    <section>
+                        <h3>Information</h3>
+                        <ul>
+                            <li>
+                                <i class="fas fa-envelope"></i>
+                                <a href="mailto:ouanis42@gmail.com">
+                                    ouanis42@gmail.com
+                                </a>
+                            </li>
+                            <li>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <a href="#">+213-559-175-931</a>
+                            </li>
+                            <li>
+                                <i class="fas fa-phone-alt"></i>
+                                <a href="#">Algeria</a>
+                            </li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3>Navigation</h3>
+                        <ul>
+                            <li><a href="#">Main</a></li>
+                            <li><a href="#">Features</a></li>
+                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">About Us</a></li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3>Credits</h3>
+                        <ul>
+                            <li>
+                                <p>
+                                    illustrations by
+                                    <a href="https://storyset.com/">Storyset</a>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Photo by
+                                    <a
+                                        href="https://unsplash.com/@writecodenow?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                                    >
+                                        Boitumelo Phetla
+                                    </a>
+                                    on
+                                    <a
+                                        href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                                    >
+                                        Unsplash
+                                    </a>
+                                </p>
+                            </li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3>Links</h3>
+                        <ul>
+                            <li><a href="#">Github</a></li>
+                            <li><a href="#">License</a></li>
+                        </ul>
+                    </section>
                 </div>
-                <section>
-                    <h2>Information</h2>
-                    <ul>
-                        <li>
-                            <i class="fas fa-envelope"></i>
-                            <a href="mailto:ouanis42@gmail.com"> ouanis42@gmail.com </a>
-                        </li>
-                        <li>
-                            <i class="fas fa-map-marker-alt"></i>
-                            <a href="#">+213-559-175-931</a>
-                        </li>
-                        <li>
-                            <i class="fas fa-phone-alt"></i>
-                            <a href="#">Algeria</a>
-                        </li>
-                    </ul>
-                </section>
-                <section>
-                    <h2>Navigation</h2>
-                    <ul>
-                        <li><a href="#">Main</a></li>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">About Us</a></li>
-                    </ul>
-                </section>
-                <section>
-                    <h2>Credits</h2>
-                    <ul>
-                        <li>
-                            <p>
-                                illustrations by
-                                <a href="https://storyset.com/">Storyset</a>
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Photo by
-                                <a
-                                    href="https://unsplash.com/@writecodenow?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-                                >
-                                    Boitumelo Phetla
-                                </a>
-                                on
-                                <a
-                                    href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-                                >
-                                    Unsplash
-                                </a>
-                            </p>
-                        </li>
-                    </ul>
-                </section>
-                <section>
-                    <h2>Links</h2>
-                    <ul>
-                        <li><a href="#">Github</a></li>
-                        <li><a href="#">License</a></li>
-                    </ul>
-                </section>
             </div>
             <div class="copyrights">
                 <div class="container">
